# SDLShipGame

./: .gitignore  CMakeLists.txt  README.md
src/client/: CMakeLists.txt  main.cpp
src/client/application/: CMakeLists.txt  clientapplication.cpp  clientapplication.h  clientgamecontroller.cpp  clientgamecontroller.h  clientstatemachine.cpp  clientstates.cpp  clientturncontroller.cpp  clientturncontroller.h
src/client/application/net/: gameclientmessagesreceiver.cpp  gameclientmessagesreceiver.h  gameclientmessagestransmitter.cpp  gameclientmessagestransmitter.h
src/client/core/: CMakeLists.txt
src/client/core/net/: clientgameadapter.cpp  clientgameadapter.h  clientmessagesreceiver.h  gameclient.cpp  gameclient.h
src/client/graphics/: CMakeLists.txt  graphicscontext.cpp  graphicscontext.h  gridrenderer.cpp  gridrenderer.h  textureloader.cpp  textureloader.h  window.cpp  window.h
src/client/graphics/drawstrategies/: actordrawstrategy.cpp  actordrawstrategy.h  areaofeffectdrawstrategy.cpp  areaofeffectdrawstrategy.h  drawstrategy.h  entitydrawstrategy.cpp  entitydrawstrategy.h  itemdrawstrategy.cpp  itemdrawstrategy.h  projectiledrawstrategy.cpp  projectiledrawstrategy.h  weapondrawstrategy.cpp  weapondrawstrategy.h
src/client/graphics/ui/: actionbutton.cpp  actorpanel.cpp  actorpanel.h  diagnosticspanel.cpp  diagnosticspanel.h  dice.cpp  dice.h  entitypanel.cpp  entitypanel.h  examineitempanel.cpp  examineitempanel.h  inventorypanel.cpp  inventorypanel.h  itemraritycolours.h  panel.h  playerpanel.cpp  playerpanel.h  statspanel.cpp  statspanel.h  text.cpp  textpanel.cpp  textpanel.h
src/client/player/: CMakeLists.txt  playercontroller.cpp  playercontroller.h
src/common/: CMakeLists.txt
src/common/core/: CMakeLists.txt  glmimport.h  json.hpp
src/common/core/components/: factioned.cpp  factioned.h
src/common/core/ecs/: systemregistry.cpp  systemregistry.h
src/common/core/event/: eventpublisher.h  eventsubscriber.h
src/common/core/grid/: grid.cpp  grid.h
src/common/core/net/: messagelogger.cpp  messagelogger.h  yojimboimport.h
src/common/core/state/: statemachine.h
src/common/core/util/: idgenerator.h  randomrolls.h  randomutils.h  setutils.h  timing.h  vectorutils.h
src/common/game/: CMakeLists.txt
src/common/game/actions/: action.cpp  action.h  actionpublisher.h  attackaction.cpp  attackaction.h  equipgearaction.cpp  equipgearaction.h  equipitemaction.cpp  equipitemaction.h  equipweaponaction.cpp  equipweaponaction.h  moveaction.cpp  moveaction.h  takeitemaction.cpp  takeitemaction.h
src/common/game/actors/: actor.cpp  actor.h  actorpool.cpp  actorpool.h
src/common/game/application/: application.cpp  application.h  applicationcontext.cpp  applicationcontext.h  engagementcontroller.cpp  engagementcontroller.h  factioncontroller.cpp  factioncontroller.h  gamecontroller.cpp  gamecontroller.h  stdoutsubscriber.cpp  stdoutsubscriber.h  turncontroller.cpp  turncontroller.h  visibilitycontroller.cpp  visibilitycontroller.h
src/common/game/data/: engagements.h  tiles.h
src/common/game/ecs/: drawsystemregistry.cpp  drawsystemregistry.h  logicsystemregistry.cpp  logicsystemregistry.h
src/common/game/effects/: effect.cpp  effect.h  effectcontroller.cpp  effectcontroller.h  effecttypes.h  grideffect.cpp  grideffect.h  statuseffect.cpp  statuseffect.h
src/common/game/engagements/: engagement.cpp  engagement.h  engagementcontroller.cpp  engagementcontroller.h
src/common/game/entities/: entity.cpp  entity.h  (+3 more)
src/common/graphics/: CMakeLists.txt  graphicscontext.cpp  healthbar.h  window.h
src/core/: CMakeLists.txt  gameadapter.cpp  gameadapter.h  gameclient.cpp  gameclient.h  gameserver.h  glmimport.cpp  glmimport.h  grid.cpp  grid.h
src/core/event/: event.h
src/core/grid/: grid.cpp  grid.h
src/core/net/: gameadapter.cpp  gameadapter.h
src/core/state/: state.h  statemachine.cpp  statemachine.h
src/core/util/: gameassert.h  idgenerator.h  randomrolls.h
src/game/: CMakeLists.txt  application.cpp  application.h  applicationcontext.cpp  applicationcontext.h  areaofeffect.cpp  areaofeffect.h  areaofeffectpool.cpp  areaofeffectpool.h  clientapplication.h  enemy.cpp  enemy.h  entity.cpp  entity.h  entitypool.cpp  entitypool.h  meleeweapon.cpp  meleeweapon.h  projectile.cpp  projectile.h  projectilepool.cpp  projectilepool.h  projectileweapon.cpp  projectileweapon.h  serverapplication.cpp  serverapplication.h  turncontroller.cpp  turncontroller.h  weapon.cpp  weapon.h
src/game/application/: application.cpp  application.h  applicationcontext.cpp  applicationcontext.h  clientapplication.cpp  clientapplication.h  serverapplication.cpp  serverapplication.h  stdoutsubscriber.cpp  stdoutsubscriber.h  turncontroller.cpp  turncontroller.h
src/game/effects/: effect.h  statuseffect.cpp
src/game/entities/: enemy.cpp  enemy.h  entity.cpp  entity.h  entitypool.cpp  entitypool.h  entitystats.h
src/game/net/: gamestateupdate.h  messages.cpp  messages.h
src/game/weapons/: areaofeffect.cpp  areaofeffect.h  areaofeffectpool.cpp  areaofeffectpool.h  meleeweapon.cpp  meleeweapon.h  projectile.cpp  projectile.h  projectilepool.cpp  projectilepool.h  projectileweapon.cpp  projectileweapon.h  weapon.cpp  weapon.h  weaponcontroller.cpp  weaponcontroller.h
src/graphics/: CMakeLists.txt  button.cpp  button.h  camera.cpp  camera.h  dice.cpp  dice.h  graphicscontext.cpp  graphicscontext.h  grid.cpp  grid.h  gridrenderer.cpp  gridrenderer.h  healthbar.cpp  healthbar.h  sdlimport.h  textureloader.cpp  textureloader.h  tile.cpp  tile.h  window.cpp  window.h
src/graphics/ui/: actionbutton.h  button.cpp  button.h  dice.cpp  dice.h  panel.cpp  panel.h  playerpanel.cpp  playerpanel.h  text.cpp  text.h  textpanel.h
src/player/: CMakeLists.txt  player.cpp  player.h  playercontroller.cpp  playercontroller.h
src/server/: CMakeLists.txt  main.cpp
src/server/application/: CMakeLists.txt  serverapplication.cpp  serverapplication.h  servergamecontroller.cpp  servergamecontroller.h  serverturncontroller.cpp  serverturncontroller.h
src/server/core/: CMakeLists.txt
(+136 files in other folders)
